2012-04-09 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: add function text::readStrings to deal with
	the case where the content of .sp file can not be read into memory

2012-04-08 John Wu <John dot Wu at ACM dot org>
	* src/colValues.cpp, src/selectParser.yy: add call to fabs when
	computing variance and standard deviation to avoid numerical
	problems (per discussion with Alexandre Maurel)
	* tests/Makefile.am: update really-small to exercise the modified
	versions of standard deviation
	* src/fileManager.cpp: remove the restrict on memory usage based
	ULONG_MAX (when ULONG is a 32-bit int, this unnecessarily limits
	the memory use to 3GB)

2012-04-04 John Wu <John dot Wu at ACM dot org>
	* src/fileManager.cpp: change the verboseness level to 2 for
	printing fileManager construction and destruction message

2012-04-03 John Wu <John dot Wu at ACM dot org>
	* examples/tcapi.c: add code to use fastbit_get_result_row_ids
	* java/FastBit.c:
	Java_gov_lbl_fastbit_FastBit_get_1result_1row_1ids mistakenly
	passed jintArray as uint32_t* to fastbit_get_result_row_ids

2012-04-01 John Wu <John dot Wu at ACM dot org>
	* java/gov/lbl/fastbitFastBit.java, java/FastBit.h,
	java/FastBit.c: add function fastbit_get_result_row_ids

2012-03-31 John Wu <John dot Wu at ACM dot org>
	* src/capi.h, src/capi.cpp: add function
	fastbit_get_result_row_ids

2012-03-28 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: update documentation of ibis::bord::groupbya to
	clarify the operations carried out

2012-03-27 John Wu <John dot Wu at ACM dot org>
	* runconfig: update the handling of generic NERSC host with GCC
	compilers
	* ChangeLog: marked as version ibis1.3.6 to support a new public
	release of FastQuery

2012-03-22 John Wu <John dot Wu at ACM dot org>
	* src/part.h, src/mensa.h, src/mensa.cpp: add function
	dropPartition as the reverse of addPartition per request of Lin
	Qiao

2012-03-21 John Wu <John dot Wu at ACM dot org>